# websocket_ros

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  package.xml
docs/: implementation.md  mock_server_usage.md  specification.md
launch/: bridge.launch  solelaunch.launch
src/: bridge_node.py  fake_robot.py  mock_video_server.py  ros_bridge.py  run_bridge_node.sh  websocket_client.py
